chore: spot bug fixes and update of list grouping to support rowspans