@@ -4,17 +4,17 @@
  * This file is part of Geoprism Registry(tm).
  *
  * Geoprism Registry(tm) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or (at your
+ * option) any later version.
  *
  * Geoprism Registry(tm) is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License
+ * for more details.
  *
- * You should have received a copy of the GNU Lesser General Public
- * License along with Geoprism Registry(tm).  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with Geoprism Registry(tm). If not, see <http://www.gnu.org/licenses/>.
  */
 package net.geoprism.registry.etl.upload;
 
@@ -33,21 +33,21 @@ import net.geoprism.registry.etl.ValidationProblem;
 
 public class ImportHistoryProgressScribe implements ImportProgressListenerIF
 {
-  private static Logger          logger                = LoggerFactory.getLogger(ImportHistoryProgressScribe.class);
-  
-  public static final Integer UPDATE_PROGRESS_EVERY_NUM = 10;
+  private static Logger          logger                    = LoggerFactory.getLogger(ImportHistoryProgressScribe.class);
+
+  public static final Integer    UPDATE_PROGRESS_EVERY_NUM = 10;
 
   private ImportHistory          history;
 
-  private int                    recordedErrors        = 0;
+  private int                    recordedErrors            = 0;
 
-  private Long                   rowNumber          = new Long(0);
+  private Long                   rowNumber                 = Long.valueOf(0);
 
-  private Long                   importedRecords       = new Long(0);
+  private Long                   importedRecords           = Long.valueOf(0);
 
-  private Set<ValidationProblem> referenceProblems     = new TreeSet<ValidationProblem>();
+  private Set<ValidationProblem> referenceProblems         = new TreeSet<ValidationProblem>();
 
-  private Set<ValidationProblem> rowValidationProblems = new TreeSet<ValidationProblem>();
+  private Set<ValidationProblem> rowValidationProblems     = new TreeSet<ValidationProblem>();
 
   public ImportHistoryProgressScribe(ImportHistory history)
   {
@@ -88,7 +88,7 @@ public class ImportHistoryProgressScribe implements ImportProgressListenerIF
       this.history.setImportedRecords(newImportedRecords);
       this.history.apply();
     }
-    
+
     this.importedRecords = newImportedRecords;
   }
 
@@ -109,7 +109,7 @@ public class ImportHistoryProgressScribe implements ImportProgressListenerIF
   {
     return this.history.getWorkProgress();
   }
-  
+
   @Override
   public Long getImportedRecordProgress()
   {
@@ -162,7 +162,7 @@ public class ImportHistoryProgressScribe implements ImportProgressListenerIF
 
       if (vp.getKey().equals(problem.getKey()))
       {
-        vp.addAffectedRowNumber(Long.valueOf(problem.getAffectedRows()));
+        vp.addAffectedRowNumber(Long.parseLong(problem.getAffectedRows()));
         return;
       }
     }
@@ -181,7 +181,7 @@ public class ImportHistoryProgressScribe implements ImportProgressListenerIF
 
       if (vp.getKey().equals(problem.getKey()))
       {
-        vp.addAffectedRowNumber(Long.valueOf(problem.getAffectedRows()));
+        vp.addAffectedRowNumber(Long.parseLong(problem.getAffectedRows()));
         return;
       }
     }
